@@ -100,14 +100,14 @@ data:extend({
 --#MARK: Robot storage
 {
     type = "technology",
-    name = "pm-worker-robots-storage-4",
+    name = "pm-worker-robots-storage-3",
     icon_size = 256,
     icons = util.technology_icon_constant_capacity("__base__/graphics/technology/worker-robots-storage.png"),
     effects =
     {
       PM.modify("worker-robot-storage", 1),
     },
-    prerequisites = {"worker-robots-storage-3"},
+    prerequisites = {"worker-robots-storage-2", "pm-metalloid-pack-unlock"},
     unit =
     {
       count = 450,
@@ -119,33 +119,7 @@ data:extend({
         {"pm-post-transition-metal-science-pack", 1},
         {"pm-metalloid-science-pack", 1}
       },
-      time = 100
-    },
-    upgrade = true,
-    order = "c-k-g-a"
-  },
-  {
-    type = "technology",
-    name = "pm-worker-robots-storage-5",
-    icon_size = 256,
-    icons = util.technology_icon_constant_capacity("__base__/graphics/technology/worker-robots-storage.png"),
-    effects =
-    {
-      PM.modify("worker-robot-storage", 1)
-    },
-    prerequisites = {"pm-worker-robots-storage-4"},
-    unit =
-    {
-      count = 650,
-      ingredients =
-      {
-        {"automation-science-pack", 1},
-        {"logistic-science-pack", 1},
-        {"pm-advanced-advanced-transition-metal-science-pack", 1},
-        {"pm-post-transition-metal-science-pack", 1},
-        {"pm-metalloid-science-pack", 1}
-      },
-      time = 100
+      time = 120
     },
     upgrade = true,
     order = "c-k-g-a"
@@ -446,21 +420,13 @@ data.raw["technology"]["worker-robots-storage-1"].unit.ingredients =
   {"logistic-science-pack", 1},
   {"pm-advanced-advanced-transition-metal-science-pack", 1},
 }
-data.raw["technology"]["worker-robots-storage-2"].prerequisites = {"worker-robots-speed-2"}
+data.raw["technology"]["worker-robots-storage-2"].prerequisites = {"worker-robots-speed-2", "pm-post-transition-metal-pack-unlock"}
 data.raw["technology"]["worker-robots-storage-2"].unit.ingredients =
 {
   {"automation-science-pack", 1},
   {"logistic-science-pack", 1},
   {"pm-advanced-advanced-transition-metal-science-pack", 1},
   {"pm-post-transition-metal-science-pack", 1}
-}
-data.raw["technology"]["worker-robots-storage-3"].prerequisites = {"worker-robots-storage-2"}
-data.raw["technology"]["worker-robots-storage-3"].unit.ingredients =
-{
-  {"automation-science-pack", 1},
-  {"logistic-science-pack", 1},
-  {"pm-advanced-advanced-transition-metal-science-pack", 1},
-  {"pm-post-transition-metal-science-pack", 1},
 }
 
 --#MARK: V.Lab speed
